--- a/setup/MSc.bib
+++ b/setup/MSc.bib
@@ -37,4 +37,45 @@
     year="2006",
     edition="second"
 }
+
+@BOOK {
+    VerthBishop08,
+    author="Van Verth, James and Bishop, Lars M.",
+    title="Essential mathematics for games and interactive applications",
+    publisher="Morgan Kaufmann",
+    year="2008",
+    edition="second"
+}
+
+@conference{Shoemake85,
+    author    = "Ken Shoemake",
+    title     = "Animating rotation with quaternion curves",
+    booktitle = "Computer graphics (SIGGRAPH '85 proceedings)",
+    %editor   = "",
+    volume   = "19",
+    %number   = "",
+    %series   = "",
+    pages    = "245-254",
+    %address  = "",
+    year      = "1985",
+    %month    = "",
+    %publisher= "",
+    %note     = "",
+}
+
+@conference{Shoemake89,
+    author    = "Ken Shoemake",
+    title     = "Quaternion calculus for animation",
+    booktitle = "Math for SIGGRAPH(ACM SIGGRAPH '89 Course Notes 23)",
+    %editor   = "",
+    %volume   = "",
+    %number   = "",
+    %series   = "",
+    pages    = "187-205",
+    %address  = "",
+    year      = "1989",
+    %month    = "",
+    %publisher= "",
+    %note     = "",
+}
 % ********** End of bibliography **********
