--- a/setup/style.tex
+++ b/setup/style.tex
@@ -39,6 +39,9 @@
 \setmathfont{Asana Math}
 \setmonofont{Consolas}
 
+% image path
+\graphicspath{{./images/}}
+
 
 % *************** Enable index generation ***************
 \makeindex
