--- a/lucrare_main.tex
+++ b/lucrare_main.tex
@@ -14,12 +14,16 @@
 \include{capitolul1/sisteme_de_coordonate}
 \include{capitolul1/vectori}
 \include{capitolul1/matrici}
-\include{capitolul1/quaternion}
-\include{capitolul1/transformari_liniare}
+\include{capitolul1/spatii_afine}
+
+\include{capitolul2/transformari}
+\include{capitolul2/transformari_liniare}
+\include{capitolul2/rotatia}
 
 % *************** Bibliography ***************
-\bibliographystyle{plain}
-{\small\bibliography{MSc}}
+\bibliographystyle{alpha}
+%{\small\bibliography{MSc}}
+\bibliography{./setup/bibliography}
 
 % *************** Appendixes ***************
 %\appendix
