--- a/setup/bibliography.bib
+++ b/setup/bibliography.bib
@@ -5,15 +5,6 @@
 % ****************************************
 
 @BOOK {
-    GolubVanLoan96,
-    author="Golub, Gene H. and Van Loan, Charles F.",
-    title="Matrix Computations",
-    publisher="Johns Hopkins",
-    year="1996",
-    edition="third"    
-}
-
-@BOOK {
     NitaNS96,
     author="C. Năstăsescu, I. Stănescu, C. Niță",
     title="Elemente de algebră superioară",
@@ -27,6 +18,15 @@
     title="Algebră liniară, geometrie analitică și geometrie diferențială",
     publisher="Editura tehnică",
     year="1987"
+}
+
+@BOOK {
+    GolubVanLoan96,
+    author="Golub, Gene H. and Van Loan, Charles F.",
+    title="Matrix Computations",
+    publisher="Johns Hopkins",
+    year="1996",
+    edition="third"    
 }
 
 @BOOK {
@@ -51,31 +51,42 @@
     author    = "Ken Shoemake",
     title     = "Animating rotation with quaternion curves",
     booktitle = "Computer graphics (SIGGRAPH '85 proceedings)",
-    %editor   = "",
+    @editor   = "SIGGRAPH",
     volume   = "19",
-    %number   = "",
-    %series   = "",
+    @number   = "",
+    @series   = "",
     pages    = "245-254",
-    %address  = "",
+    @address  = "",
     year      = "1985",
-    %month    = "",
-    %publisher= "",
-    %note     = "",
+    @month    = "",
+    @publisher= "",
+    @note     = "",
 }
 
 @conference{Shoemake89,
     author    = "Ken Shoemake",
     title     = "Quaternion calculus for animation",
     booktitle = "Math for SIGGRAPH(ACM SIGGRAPH '89 Course Notes 23)",
-    %editor   = "",
-    %volume   = "",
-    %number   = "",
-    %series   = "",
+    @editor   = "SIGGRAPH",
+    @volume   = "",
+    @number   = "",
+    @series   = "",
     pages    = "187-205",
-    %address  = "",
+    @address  = "",
     year      = "1989",
-    %month    = "",
-    %publisher= "",
-    %note     = "",
+    @month    = "",
+    @publisher= "",
+    @note     = "",
 }
+
+@misc{
+    WolframAlfa,
+    author = "Weisstein, Eric W. ",
+    title = "Affine Space.",
+    howpublished = "\url{http://mathworld.wolfram.com/AffineSpace.html}",
+    year = 2012,
+    note = "[From MathWorld--A Wolfram Web Resource. Online; accessed 05.05.2012]"
+}
+
+
 % ********** End of bibliography **********
