--- a/setup/style.tex
+++ b/setup/style.tex
@@ -10,6 +10,7 @@
 \usepackage{polyglossia}
 \setmainlanguage{romanian}
 
+\usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{epsfig}
 \usepackage{amsmath}
@@ -31,7 +32,6 @@
 \usepackage{algorithmic}
 \usepackage[retainorgcmds]{IEEEtrantools}
 \usepackage[at]{easylist}
-
 %
 % Font setup
 \usepackage{unicode-math}
@@ -48,8 +48,8 @@
 
 % *************** Add reference to page number at which bibliography entry is cited ***************
 \usepackage{citeref}
-\renewcommand{\bibitempages}[1]{\newblock {\scriptsize [\mbox{cited at p.\
- }#1]}}
+%\renewcommand{\bibitempages}[1]{\newblock {\scriptsize [\mbox{cited at p.\
+% }#1]}}
 
 % *************** Some colour definitions ***************
 \usepackage{color}
